bug 49086 - added nowrap to style

--- a/sugarcrm/themes/Sugar5/css/style.css
+++ b/sugarcrm/themes/Sugar5/css/style.css
@@ -3684,4 +3684,5 @@ div#chartDashlets
     border-color: #CBDAE6;
     color: #000000;
     text-align: right;
+    white-space: nowrap;
 }
